--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma work for my Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 </head>
 <body>
     <header class="header">
@@ -56,20 +55,7 @@
         </div>
         <div class="page-slider">
             <div class="wrapper">
-                <div class="swiper">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide"><img src="images/slider/01.jpg" alt=""></div>
-                        <div class="swiper-slide">Slide 2</div>
-                        <div class="swiper-slide">Slide 3</div>
-                    </div>
-                    <!-- If we need pagination -->
-                        <div class="swiper-pagination"></div>
-                    <!-- If we need navigation buttons -->
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>                    
-                </div>
+                <!-- Splide -->
             </div>
         </div>
         <div class="page-about">
@@ -181,7 +167,6 @@
     </svg>
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>    
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <!-- Burger -->
     <script src="js/scrypt.js"></script>    
     <!-- LightBox -->
