--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma work for my Portfolio</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -55,7 +56,7 @@
         </div>
         <div class="page-slider">
             <div class="wrapper">
-                <!-- Splide -->
+                <!-- Тут будет Slider -->
             </div>
         </div>
         <div class="page-about">
