--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
             <div class="wrapper">
                 <h2>Portfolio</h2>
                 <a href="images/Portfolio_1.png" class="example-image-link" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                    <img class="example-image" src="images/Portfolio_1.png" alt=""/></a>
+                    <img class="example-image" src="images/Portfolio_1.png" alt=""/>
                 </a>
                 <p>Online fashion store - Homepage</p>
                 <a href="images/reebok_web.png" class="example-image-link" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                    <img class="example-image" src="images/reebok_web.png" alt=""/></a>
+                    <img class="example-image" src="images/reebok_web.png" alt=""/>
                 </a>
                 <p>Reebok Store - Concept</p>
                 <a href="images/braun.png" class="example-image-link" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                    <img class="example-image" src="images/braun.png" alt=""/></a>
+                    <img class="example-image" src="images/braun.png" alt=""/>
                 </a>
                 <p>Braun Landing Page - Concept</p>
             </div>
@@ -147,7 +147,7 @@
             <div class="wrapper">
                 <h2>Contacts</h2>
                 <p>Want to know more or just chat?<br> You are welcome!</p>
-                <button class="btn"> <a href="#">Send message</a></button></a>
+                <button class="btn"> <a href="#">Send message</a></button>
                 <div class="social_btn">
                     <a href="#" class="bg-in"></a>
                     <a href="#" class="bg-inst"></a>
